Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -3,7 +3,7 @@ title: "Create Plant"
 openapi: "POST /plants"
 ---
 
-| hello hi | | |
+| hello hi helo | | |
 | -------- | --- | --- |
 |          | | |
 |          | | |
